test_fm/_test16.ref
Error: redeclaration of static superclass method 'x' as non-static in '_test16.nj' on line 11