test_fm/_test16.nj
//
// name already used for a static method
//

public class Main extends Object {
  static Integer x() {
  }
}

class Aux extends Main {
  Integer x() {
  }
}
